# mkdocs-header-dropdown-plugin

./: README.md  SETUP_SUMMARY.md  USAGE.md  pyproject.toml
.github/workflows/: README.md  ci.yml  deploy-docs.yml
example/: mkdocs.yml
example/docs/: getting-started.md  index.md
mkdocs_header_dropdown/: plugin.py  presets.py
mkdocs_header_dropdown/templates/partials/: header-dropdown.html
templates/: main.html
templates/partials/: header-dropdown.html  header.html
